# gemini-tts

./: .env.example  .gitignore  README.md  TESTING.md  agent_cascaded_google.py  agent_native.py  metrics_observer.py  pyproject.toml
dashboard/: README.md  index.html  vercel.json
data/metrics/: flash_tts_tier1.json  flash_tts_tier1.md
posts/: linkedin-post.md  make_docs.js  x-post.md
research/: comparison-results.md  flash-live-vs-tts.md  gemini-tts-notes.md  test-plan.md
scripts/: analyze_comparison.py  compare_tts.py  demo_audio_tags.py  demo_multi_speaker.py  demo_voices.py  derisk_gemini_tts.py  make_call.py  test_flash_tts.py
